--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/ProhibitionVoltage.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/ProhibitionVoltage.xaml
@@ -34,7 +34,7 @@
         <RowDefinition Height="*" />
         <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Content="Номер позиции" />
+        <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Content="Номер канала" />
     <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource NumberPosition}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding NumberPosition}"  />
 
     <Label Grid.Column="0" Grid.Row="1" Content="Напр. управления, В" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
