--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
@@ -17,11 +17,11 @@
         </ResourceDictionary>
     </Grid.Resources>
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*"  />
-        <ColumnDefinition Width="1.1*" />
-        <ColumnDefinition Width="30" />
+        <ColumnDefinition Width="225"  />
+        <ColumnDefinition Width="225" />
         <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="1.1*" />
+        <ColumnDefinition Width="225" />
+        <ColumnDefinition Width="225" />
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
         <RowDefinition Height="auto" />
@@ -31,16 +31,16 @@
         <RowDefinition Height="auto" />
         <RowDefinition Height="auto" />
     </Grid.RowDefinitions>
-    <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Content="Номер позиции" />
+    <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Content="Номер канала" />
     <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource NumberPosition}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding NumberPosition}" />
 
-    <Label Grid.Column="0" Grid.Row="1" Content="Напр. управления, мВ" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
+    <Label Grid.Column="0" Grid.Row="1" Content="Напр. управления, В" Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" />
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1"  Visibility="{Binding ShowVoltage, Converter={StaticResource B2V}}" Value="{Binding ControlVoltage, Converter={StaticResource DML}}" />
 
 
     <Label Grid.Column="0" Grid.Row="1"  Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" >
         <TextBlock>
-            Ограничение по<LineBreak/>напр. управления, мВ
+            Ограничение по<LineBreak/>напр. управления, В
         </TextBlock>
     </Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="1"  Visibility="{Binding ShowAmperage, Converter={StaticResource B2V}}" Value="{Binding ControlVoltageMaximum, Converter={StaticResource DML}}" />
@@ -57,7 +57,7 @@
 
     <Label Grid.Column="0" Grid.Row="4" Visibility="{Binding ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}">
         <TextBlock>
-                Напряжение вспом.<LineBreak/>питания 1, мВ
+                Напряжение вспом.<LineBreak/>питания 1, В
         </TextBlock>
     </Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="4"  Visibility="{Binding ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}" Value="{Binding AuxiliaryVoltagePowerSupply1, Converter={StaticResource DML}}"   />
@@ -88,14 +88,14 @@
 
     <Label Grid.Column="0" Grid.Row="3" >
         <TextBlock>
-            Комм. <LineBreak/>напряжение, мВ
+            Комм. <LineBreak/>напряжение, В
         </TextBlock>
     </Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3"   Value="{Binding SwitchedVoltage, Converter={StaticResource DML}}"   />
 
     <Label Grid.Column="3" Grid.Row="4"  Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}">
         <TextBlock>
-                Напряжение вспом.<LineBreak/>питания 2, мВ
+                Напряжение вспом.<LineBreak/>питания 2, В
         </TextBlock>
     </Label>
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="4" Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}"  Value="{Binding AuxiliaryVoltagePowerSupply2, Converter={StaticResource DML}}"   />
@@ -104,11 +104,11 @@
 
     <Grid Grid.Row="5" Grid.ColumnSpan="5" Margin="0,24,0,0" Visibility="{Binding IsProfileStyle, Converter={StaticResource B2V}}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"  />
-            <ColumnDefinition Width="1.1*" />
-            <ColumnDefinition Width="30" />
+            <ColumnDefinition Width="225"  />
+            <ColumnDefinition Width="225" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="1.1*" />
+            <ColumnDefinition Width="225" />
+            <ColumnDefinition Width="225" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -124,11 +124,11 @@
 
     <Grid Grid.Row="5" Grid.ColumnSpan="5" Margin="0,24,0,0" Visibility="{Binding IsProfileStyle, Converter={StaticResource B2VI}}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"  />
-            <ColumnDefinition Width="1.1*" />
-            <ColumnDefinition Width="30" />
+            <ColumnDefinition Width="225"  />
+            <ColumnDefinition Width="225" />
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="1.1*" />
+            <ColumnDefinition Width="225" />
+            <ColumnDefinition Width="225" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
