--- a/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
@@ -88,6 +88,7 @@
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
                 <TextBox Grid.Column="0"  Grid.Row="0" Text="{Binding SelectedProfileNameCopy}" Foreground="Black" BorderThickness="0" Margin="40,0,0,0" 
@@ -96,18 +97,22 @@
                 <!--<Border BorderThickness="1" Grid.Column="0" Grid.Row="0" BorderBrush="Gray"   />-->
 
                 <Button Grid.Column="1" Grid.Row="0" IsEnabled="{Binding IsEditModeEnabled}"   Visibility="{Binding SelectedProfileDeepDataNotNull, Converter={StaticResource B2V}}"
+                        Click="BeginCloneProfile_Click" Style="{StaticResource ButtonWithIcon}">
+                    <Path Data="{StaticResource Clone}" Style="{StaticResource PathIcon}"/>
+                </Button>
+                <Button Grid.Column="2" Grid.Row="0" IsEnabled="{Binding IsEditModeEnabled}"   Visibility="{Binding SelectedProfileDeepDataNotNull, Converter={StaticResource B2V}}"
                         Click="BeginEditProfile_Click" Style="{StaticResource ButtonWithIcon}">
                     <Path Data="{StaticResource Edit}" Style="{StaticResource PathIcon}"/>
                 </Button>
-                <Button Grid.Column="2" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}"   Visibility="{Binding SelectedProfileDeepDataNotNull, Converter={StaticResource B2V}}"
+                <Button Grid.Column="3" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}"   Visibility="{Binding SelectedProfileDeepDataNotNull, Converter={StaticResource B2V}}"
                         Click="CancelEditProfile_Click" Style="{StaticResource ButtonWithIcon}" Margin="5,0">
                     <Path Data="{StaticResource Cansel}" Style="{StaticResource PathIcon}"/>
                 </Button>
-                <Button Grid.Column="3" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}"  Visibility="{Binding SelectedProfileDeepDataNotNull, Converter={StaticResource B2V}}"
+                <Button Grid.Column="4" Grid.Row="0" IsEnabled="{Binding IsEditModeActive}"  Visibility="{Binding SelectedProfileDeepDataNotNull, Converter={StaticResource B2V}}"
                         Click="EndEditProfile_Click" Style="{StaticResource ButtonWithIcon}">
                     <Path Data="{StaticResource Save}" Style="{StaticResource PathIcon}"/>
                 </Button>
-                <Button Grid.Column="4" Grid.Row="0" IsEnabled="{Binding IsEditModeEnabled}"   Visibility="{Binding SelectedProfileDeepDataNotNull, Converter={StaticResource B2V}}"
+                <Button Grid.Column="5" Grid.Row="0" IsEnabled="{Binding IsEditModeEnabled}"   Visibility="{Binding SelectedProfileDeepDataNotNull, Converter={StaticResource B2V}}"
                         Click="DeleteProfile_Click" Style="{StaticResource ButtonWithIcon}">
                     <Path Data="{StaticResource Delete}" Style="{StaticResource PathIcon}"/>
                 </Button>
@@ -120,7 +125,7 @@
                                     AddTestParametersEvent="AddTestParametersEvent_Click" />
             
             
-            <customControls:ScrollViewerLeftMouseButtonScroll Grid.Column="0" Grid.Row="2"  VerticalAlignment="Stretch" Background="White"  Style="{StaticResource DefaultScrollViewer}">
+            <!--<customControls:ScrollViewerLeftMouseButtonScroll Grid.Column="0" Grid.Row="2"  VerticalAlignment="Stretch" Background="White"  Style="{StaticResource DefaultScrollViewer}">
                 <Grid IsSharedSizeScope="True" Background="White">
                    
                     <Grid.RowDefinitions>
@@ -129,13 +134,15 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
-                    <profilesPageComponents:ListViewTestParametersUserControl Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch" 
+                   
+                </Grid>
+            </customControls:ScrollViewerLeftMouseButtonScroll>-->
+
+            <profilesPageComponents:ListViewTestParametersUserControl Grid.Column="0" Grid.Row="2" HorizontalAlignment="Stretch" 
                             ContentIsEnabled="{Binding IsEditModeActive}"  
                             ItemSource="{Binding ProfileDeepDataCopy.TestParametersAndNormatives}"
-                            PreviewMouseWheel="TestParametersListView_OnPreviewMouseWheel"
-                            VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.ScrollUnit="Pixel" />
-                </Grid>
-            </customControls:ScrollViewerLeftMouseButtonScroll>
+                         
+                            />
 
             <Button Grid.Column="0" Grid.Row="3" Style="{StaticResource PrimaryButton}" HorizontalAlignment="Right" 
                     Content="{x:Static res:Resources.Next}"
